--- a/2024-11-03-javascript/12-power-2.0/index.html
+++ b/2024-11-03-javascript/12-power-2.0/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/style.css">
         <script src="assets/js/app.js"></script>
-        <title>if else Exercise</title>
+        <title>Power 2.0</title>
     </head>
     <body>
         
