--- a/2024-11-19/01-DHTML/index.html
+++ b/2024-11-19/01-DHTML/index.html
@@ -20,5 +20,12 @@
         <div id="imagesContainer">
             
         </div>
+
+        <hr>
+
+        <button onclick="addFruit()">Input fruit</button>
+        <ol id="fruits">
+            
+        </ol>
     </body>
 </html>
