--- a/2024-11-19/01-DHTML/index.html
+++ b/2024-11-19/01-DHTML/index.html
@@ -22,9 +22,15 @@
         </div>
 
         <hr>
-
         <button onclick="addFruit()">Input fruit</button>
         <ol id="fruits">
+            
+        </ol>
+
+        <hr>
+        <input id="car" type="text" placeholder="Entre a new car">
+        <button onclick="addCar()">Add car</button>
+        <ol id="cars">
             
         </ol>
     </body>
