--- a/2024-11-19/homework/02-dynamicHTML/index.html
+++ b/2024-11-19/homework/02-dynamicHTML/index.html
@@ -9,7 +9,7 @@
         <title>Home Work Dynamic HTML 02</title>
     </head>
     <body>
-        <form id="formGrades" onsubmit="addIngredient(event)">
+        <form id="formGrades" onsubmit="addGrades(event)">
             <label class="form-label" for="firstName">First Name:</label>
             <input class="form-control-sm" id="firstName" type="text" placeholder="Enter a first name" required>
             <br><br>
