--- a/2024-12-03-exceptions/10-iife/index.html
+++ b/2024-12-03-exceptions/10-iife/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="assets/js/app.js"></script>
-        <title>09 strict mode</title>
+        <script src="assets/js/printing.js"></script>
+        <title>10 IIFE</title>
     </head>
     <body>
         
