--- a/2024-12-03-exceptions/10-iife/index.html
+++ b/2024-12-03-exceptions/10-iife/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="assets/js/app.js"></script>
+        <script defer src="assets/js/app.js"></script>
         <script src="assets/js/printing.js"></script>
         <title>10 IIFE</title>
     </head>
     <body>
-        
+        <form id="formidable">
+            <input id="input" type="text">
+            <button id="bouton">Submit form</button>
+        </form>
     </body>
 </html>
