--- a/2024-12-08-async/07-hannukah/index.html
+++ b/2024-12-08-async/07-hannukah/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="assets/js/app.js"></script>
-        <title>06 async error handling exercise 2</title>
+        <title>07 Hanukah</title>
     </head>
     <body>
         <button id="calc">Calc</button>
