--- a/2024-12-08-async/09-promise-ex3/index.html
+++ b/2024-12-08-async/09-promise-ex3/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="assets/js/app.js"></script>
-        <title>08 Promise</title>
+        <title>09 promise exercise 3</title>
     </head>
     <body>
-        <button id="calc">Calc</button>
+        <button id="power">Power</button>
     </body>
 </html>
