--- a/2024-12-08-async/homework/14-async-function/index.html
+++ b/2024-12-08-async/homework/14-async-function/index.html
@@ -7,6 +7,7 @@
         <title>14 HomeWork async Function</title>
     </head>
     <body>
+        <button id="displayLocation">Display location</button>
         <span id="location"></span>
     </body>
 </html>
