users async with li

--- a/2024-12-10-ajax/05-async-function-return-value/index.html
+++ b/2024-12-10-ajax/05-async-function-return-value/index.html
@@ -4,12 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="assets/js/app.js"></script>
-        <title>04 Ajax with proper functions</title>
+        <title>05 async function return value</title>
     </head>
     <body>
-        <button id="displayUsers">Display users</button>
-        <ul id="users">
 
-        </ul>
     </body>
 </html>
