--- a/2024-12-31-oop/07-poly-ex2/index.html
+++ b/2024-12-31-oop/07-poly-ex2/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="module" src="assets/js/app.js"></script>
-        <title>06 Polymorphism exercise</title>
+        <title>07 Polymorphism exercise 2</title>
     </head>
     <body>
         
